base/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpirafex-web
  namespace: alpirafex-web
  labels:
    app.kubernetes.io/name: alpirafex-web
    app.kubernetes.io/part-of: alpirafex
  annotations:
    ingress.kubernetes.io/backend-protocol: http
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: haproxy
  rules:
    - host: alpirafex.rafex.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alpirafex-web
                port:
                  number: 80
